# scan

./: .gitignore  CMakeLists.txt  README.md  backend.cpp
main/: CMakeLists.txt
main/include/api/: json_rpc_server.h
main/include/application/: modbus_service.h  wifi_service.h
main/include/protocol/: modbus_protocol.h
main/include/transport/: uart_transport.h
main/src/: app_main.c
main/src/api/: json_rpc_server.c
main/src/application/: modbus_service.c  wifi_service.c
main/src/protocol/: modbus_protocol.c
main/src/transport/: uart_transport.c
