idf_component_register(
    SRCS
        "src/app_main.c"
        "src/transport/uart_transport.c"
        "src/protocol/modbus_protocol.c"
        "src/application/modbus_service.c"
        "src/api/json_rpc_server.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        driver
        esp_http_server
        cJSON
        nvs_flash
)
